# samp-plugin-template

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  makefile
Plugin/: CMakeLists.txt  Natives.cpp  Natives.h  common.h  main.cpp  plugin.def  plugin.h  structs.h  types.h
sampsvr/: crashinfo.txt  server.cfg  server_log.txt
sampsvr/gamemodes/: main.amx  main.pwn
sampsvr/plugins/: Plugin.exp  Plugin.ilk  Plugin.lib
